# cifra

./: CMakeLists.txt  cifra.pc.in
src/: Makefile
